feat(authn): implement challenge request
Implement GET /authn/challenge, and also build out support around
ViewModels and API messages.
